--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/estiloprofolio.css">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+</head>
+<body>
+	<div class="principal">
+	
+		<div class="inicio">
+			<h1>Hola, soy Matthew Williams. </h1>
+			<h1></h1>
+		</div>
+		
+		<div class="boton">
+			
+		</div>
 
+	</div>	
+		
+</body>
+</html>
