--- a/index.html
+++ b/index.html
@@ -7,16 +7,40 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class="principal">
-	
 		<div class="inicio">
-			<h1>Hola, soy Matthew Williams. </h1>
-			<h1></h1>
-		</div>
-		
+			<h1>Hola, soy <strong>Manuel. </strong></h1>
+
 		<div class="boton">
+
+			
+		 <a class="boton_entrada" href="#">entrar</a>
 			
 		</div>
+			
+		</div>
+
+		<nav>
+			<div class="menu">
+				<a href="#inicio">Inicio</a>
+				<a href="#acercade">Acerca de</a>
+				<a href="#proyecos">Proyectos</a>
+				<a href="#blog">Blog</a>
+				<a href="#contacto">Contacto</a>
+			</div>
+		</nav>
+		
+		
+
+	<div  id= "acercade" class="Acercade">
+		  <h1>Acerca de</h1>
+		  <div class="row">
+	      <div class="six columns fila-2"></div>
+	      <div class="six columns fila-2"></div>
+	      
+    
+    </div>
+	
+		
 
 	</div>	
 		
