--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 </head>
 <body>
-		<div class="inicio">
+		<div id="inicio" class="inicio">
 			<h1>Hola, soy <strong>Manuel. </strong></h1>
 
 		<div class="boton">
 
 			
-		 <a class="boton_entrada" href="#">entrar</a>
+		 <a class="boton_entrada" href="#menu">entrar</a>
 			
 		</div>
 			
 		</div>
 
 		<nav>
-			<div class="menu">
+			<div  id="menu" class="menu">
 				<a href="#inicio">Inicio</a>
 				<a href="#acercade">Acerca de</a>
 				<a href="#proyectos">Trabajos</a>
